syntax = "proto3";

option java_multiple_files = true;
option java_package = "fruitbox.iam.auth";
option java_outer_classname = "AuthProto";

package fruitbox.auth;

service AuthService {
  rpc Signin(SigninRequest) returns (SigninReplay) {}
}

message SigninRequest {
  optional string email = 1;
  optional string phone = 2;
  string password = 3;
}

message SigninReplay {
  string token = 1;
  string token_type = 2;
}
